Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,380 +1,105 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Descargar MP4 — Estilo Matrix</title>
-  <meta name="description" content="Sube un archivo MP4 y descárgalo inmediatamente. Interfaz con fondo Matrix/Hacker, drag & drop y botón de descarga." />
-
   <style>
-    /* ====== Reset básico ====== */
-    *, *::before, *::after { box-sizing: border-box; }
-    html, body { height: 100%; margin: 0; }
     body {
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica, Arial, sans-serif;
-      color: #e6ffe6;
-      background: #000; /* respaldo si el canvas no carga */
+      margin: 0;
+      background: #000;
+      color: #1cff85;
+      font-family: monospace;
+      text-align: center;
       overflow: hidden;
     }
-
-    /* ====== Canvas de lluvia Matrix ====== */
     #matrix-bg {
       position: fixed;
-      inset: 0;
-      width: 100vw;
-      height: 100vh;
-      display: block;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
       z-index: -1;
-      filter: contrast(140%) saturate(110%);
     }
-
-    /* ====== Contenedor principal (glassmorphism) ====== */
-    .wrap {
-      position: relative;
-      min-height: 100%;
-      display: grid;
-      place-items: center;
-      padding: 24px;
-    }
-    .card {
-      width: min(680px, 92vw);
-      background: color-mix(in oklab, #032a03 35%, transparent);
-      border: 1px solid color-mix(in oklab, #1cff85 40%, transparent);
-      backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
-      border-radius: 16px;
-      box-shadow: 0 20px 60px rgba(0,0,0,.6), inset 0 0 40px rgba(28,255,133,.08);
-      padding: 24px clamp(18px, 3vw, 32px);
-    }
-    .title {
+    .container {
       display: flex;
+      flex-direction: column;
+      justify-content: center;
       align-items: center;
-      gap: 12px;
-      margin: 0 0 4px 0;
-      letter-spacing: .4px;
-      font-weight: 700;
-      font-size: clamp(20px, 3vw, 28px);
-      text-shadow: 0 0 12px rgba(28,255,133,.5);
+      height: 100vh;
     }
-    .subtitle {
-      margin: 0 0 18px 0;
-      font-size: clamp(12px, 2.2vw, 14px);
-      opacity: .85;
-    }
-
-    /* ====== Zona de carga (drag & drop) ====== */
-    .dropzone {
-      position: relative;
-      display: grid;
-      place-items: center;
-      gap: 10px;
-      width: 100%;
-      min-height: 180px;
-      border: 2px dashed rgba(28,255,133,.5);
-      border-radius: 14px;
-      background: linear-gradient(180deg, rgba(3,30,3,.35), rgba(3,25,3,.15));
-      outline: none;
-      transition: border-color .2s ease, transform .1s ease;
-      cursor: pointer;
-      padding: clamp(16px, 3vw, 24px);
-    }
-    .dropzone:is(:hover, :focus-visible) {
-      border-color: rgba(28,255,133,.85);
-      transform: translateY(-1px);
-    }
-    .dropzone.dragover {
-      border-color: #1cff85;
-      box-shadow: 0 0 0 4px rgba(28,255,133,.12);
-    }
-    .dz-icon {
-      font-size: 36px;
-      line-height: 1;
-    }
-    .dz-label {
-      text-align: center;
-      font-size: clamp(14px, 2.6vw, 16px);
-    }
-    .dz-hint {
-      font-size: 12px;
-      opacity: .8;
-    }
-    input[type="file"] {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0;
-      cursor: pointer;
-    }
-
-    /* ====== Estado / Archivo ====== */
-    .file-row {
-      display: grid;
-      grid-template-columns: 1fr auto;
-      align-items: center;
-      gap: 10px;
-      margin-top: 14px;
-      padding: 10px 12px;
-      background: rgba(0,0,0,.25);
-      border: 1px solid rgba(28,255,133,.18);
-      border-radius: 10px;
-    }
-    .file-name {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      font-size: 14px;
-    }
-    .badge {
-      font-size: 11px;
-      padding: 3px 8px;
-      border-radius: 999px;
-      background: rgba(28,255,133,.12);
-      border: 1px solid rgba(28,255,133,.35);
-    }
-
-    /* ====== Botón ====== */
-    .actions {
-      display: flex;
-      gap: 12px;
-      justify-content: flex-end;
-      margin-top: 16px;
-      flex-wrap: wrap;
+    h1 {
+      font-size: 2rem;
+      text-shadow: 0 0 10px #1cff85;
     }
     .btn {
-      appearance: none;
-      border: 1px solid rgba(28,255,133,.55);
-      background: radial-gradient(120% 120% at 50% -20%, rgba(28,255,133,.22), rgba(0,0,0,.2));
+      margin-top: 20px;
+      padding: 12px 24px;
+      font-size: 1rem;
+      font-weight: bold;
       color: #eaffea;
-      padding: 10px 16px;
-      font-weight: 600;
-      border-radius: 12px;
+      background: transparent;
+      border: 2px solid #1cff85;
+      border-radius: 8px;
       cursor: pointer;
-      transition: transform .06s ease, box-shadow .2s ease, border-color .2s ease;
-      box-shadow: 0 8px 24px rgba(28,255,133,.08), inset 0 0 0 999px rgba(0,0,0,.04);
+      text-decoration: none;
+      box-shadow: 0 0 10px #1cff85;
+      transition: all 0.2s ease-in-out;
     }
-    .btn:is(:hover, :focus-visible) {
-      transform: translateY(-1px);
-      box-shadow: 0 10px 28px rgba(28,255,133,.12);
-      border-color: #1cff85;
-    }
-    .btn:active { transform: translateY(0); }
-    .btn[disabled] {
-      opacity: .45;
-      cursor: not-allowed;
-      filter: grayscale(.2);
-    }
-
-    /* ====== Footer ====== */
-    .foot {
-      margin-top: 18px;
-      font-size: 12px;
-      opacity: .8;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
-    .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, 'Liberation Mono', monospace; }
-
-    /* ====== Responsivo ====== */
-    @media (max-width: 420px) {
-      .dropzone { min-height: 150px; }
+    .btn:hover {
+      background: #1cff85;
+      color: #000;
+      box-shadow: 0 0 20px #1cff85;
     }
   </style>
 </head>
 <body>
-  <canvas id="matrix-bg" aria-hidden="true"></canvas>
-
-  <div class="wrap">
-    <section class="card" role="region" aria-label="Carga y descarga de video MP4">
-      <h1 class="title">⬇️ Descargar MP4</h1>
-      <p class="subtitle">Sube un archivo <strong>.mp4</strong> y lo descargaremos al instante. También puedes usar el botón manual si tu navegador bloquea la descarga automática.</p>
-
-      <label class="dropzone" id="dropzone" tabindex="0" aria-label="Zona para arrastrar y soltar o seleccionar un archivo MP4">
-        <div class="dz-icon">🎬</div>
-        <div class="dz-label">
-          Arrastra y suelta tu video aquí<br/>
-          <span class="dz-hint">o haz clic para seleccionar</span>
-        </div>
-        <input id="fileInput" type="file" accept="video/mp4" aria-label="Seleccionar archivo MP4"/>
-      </label>
-
-      <div class="file-row" id="fileRow" hidden>
-        <div class="file-name" id="fileName">archivo.mp4</div>
-        <span class="badge mono" id="fileSize">0 MB</span>
-      </div>
-
-      <div class="actions">
-        <button class="btn" id="btnDownload" disabled>Descargar ahora</button>
-        <button class="btn" id="btnClear" disabled>Limpiar</button>
-      </div>
-
-      <p class="foot">
-        <span>🎧 Consejo: No subimos nada a ningún servidor; todo ocurre en tu navegador.</span>
-        <span class="mono">Modo: Matrix</span>
-      </p>
-    </section>
+  <canvas id="matrix-bg"></canvas>
+  <div class="container">
+    <h1>⬇️ Descargar mi video MP4</h1>
+    <!-- Aquí pones el nombre de tu archivo de video -->
+    <a href="video.mp4" download class="btn">Descargar Video</a>
   </div>
 
   <script>
-    // ====== Fondo Matrix (Canvas) ======
-    (function matrixRain() {
-      const canvas = document.getElementById('matrix-bg');
-      const ctx = canvas.getContext('2d');
-      let width, height, cols, drops;
-      const chars = '01アイウエオカキクケコｱｲｳｴｵｶｷｸｹｺ$#@*&%+~'.split('');
+    // Fondo Matrix
+    const canvas = document.getElementById('matrix-bg');
+    const ctx = canvas.getContext('2d');
+    canvas.height = window.innerHeight;
+    canvas.width = window.innerWidth;
 
-      function resize() {
-        width = canvas.width = window.innerWidth;
-        height = canvas.height = window.innerHeight;
-        cols = Math.floor(width / 20);
-        drops = Array.from({ length: cols }, () => Math.floor(Math.random() * -20));
-      }
-      window.addEventListener('resize', resize, { passive: true });
-      resize();
+    const letters = '01アイウエオカキクケコｱｲｳｴｵｶｷｸｹｺ$#@*&%+~';
+    const lettersArr = letters.split('');
 
-      function draw() {
-        // cola
-        ctx.fillStyle = 'rgba(0, 0, 0, 0.08)';
-        ctx.fillRect(0, 0, width, height);
+    const fontSize = 18;
+    const columns = canvas.width / fontSize;
+    const drops = [];
 
-        // caracteres
-        ctx.font = '18px monospace';
-        for (let i = 0; i < cols; i++) {
-          const text = chars[(Math.random() * chars.length) | 0];
-          const x = i * 20;
-          const y = drops[i] * 20;
-          ctx.fillStyle = 'rgba(180, 255, 200, 0.9)';
-          ctx.fillText(text, x, y);
+    for (let i = 0; i < columns; i++) {
+      drops[i] = 1;
+    }
 
-          // destello en cabeza
-          ctx.fillStyle = 'rgba(40, 255, 140, 0.9)';
-          ctx.fillRect(x, y, 2, 2);
+    function draw() {
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-          if (y > height && Math.random() > 0.975) drops[i] = 0;
-          else drops[i]++;
+      ctx.fillStyle = '#1cff85';
+      ctx.font = fontSize + "px monospace";
+
+      for (let i = 0; i < drops.length; i++) {
+        const text = lettersArr[Math.floor(Math.random() * lettersArr.length)];
+        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+          drops[i] = 0;
         }
-        requestAnimationFrame(draw);
+        drops[i]++;
       }
-      draw();
-    })();
+    }
 
-    // ====== Lógica de carga/descarga ======
-    (function fileHandler() {
-      const fileInput = document.getElementById('fileInput');
-      const dropzone = document.getElementById('dropzone');
-      const fileRow = document.getElementById('fileRow');
-      const fileNameEl = document.getElementById('fileName');
-      const fileSizeEl = document.getElementById('fileSize');
-      const btnDownload = document.getElementById('btnDownload');
-      const btnClear = document.getElementById('btnClear');
-
-      let selectedFile = null;
-      let objectURL = null;
-
-      function formatBytes(bytes) {
-        const units = ['B','KB','MB','GB','TB'];
-        let i = 0;
-        let value = bytes;
-        while (value >= 1024 && i < units.length - 1) {
-          value /= 1024;
-          i++;
-        }
-        return value.toFixed(value < 10 && i > 0 ? 2 : 0) + ' ' + units[i];
-      }
-
-      function setFile(file) {
-        if (!file) return;
-        if (file.type !== 'video/mp4') {
-          alert('Por favor selecciona un archivo con extensión .mp4');
-          return;
-        }
-        cleanupURL();
-        selectedFile = file;
-        objectURL = URL.createObjectURL(file);
-
-        // UI
-        fileNameEl.textContent = file.name;
-        fileSizeEl.textContent = formatBytes(file.size);
-        fileRow.hidden = false;
-        btnDownload.disabled = false;
-        btnClear.disabled = false;
-
-        // Descarga inmediata (algunos navegadores lo permiten tras un gesto del usuario)
-        triggerDownload();
-      }
-
-      function triggerDownload() {
-        if (!selectedFile || !objectURL) return;
-        const a = document.createElement('a');
-        a.href = objectURL;
-        a.download = selectedFile.name || 'video.mp4';
-        document.body.appendChild(a);
-        a.click();
-        requestAnimationFrame(() => {
-          document.body.removeChild(a);
-        });
-      }
-
-      function cleanupURL() {
-        if (objectURL) {
-          URL.revokeObjectURL(objectURL);
-          objectURL = null;
-        }
-      }
-
-      function clearAll() {
-        cleanupURL();
-        selectedFile = null;
-        fileInput.value = '';
-        fileRow.hidden = true;
-        btnDownload.disabled = true;
-        btnClear.disabled = true;
-      }
-
-      // input change
-      fileInput.addEventListener('change', (e) => {
-        const file = e.target.files && e.target.files[0];
-        setFile(file);
-      });
-
-      // drag & drop
-      ['dragenter','dragover'].forEach(evt => {
-        dropzone.addEventListener(evt, (e) => {
-          e.preventDefault();
-          e.stopPropagation();
-          dropzone.classList.add('dragover');
-        });
-      });
-      ['dragleave','drop'].forEach(evt => {
-        dropzone.addEventListener(evt, (e) => {
-          e.preventDefault();
-          e.stopPropagation();
-          dropzone.classList.remove('dragover');
-        });
-      });
-      dropzone.addEventListener('drop', (e) => {
-        const file = e.dataTransfer?.files?.[0];
-        setFile(file);
-      });
-
-      // accesibilidad: Enter/Espacio abre selector
-      dropzone.addEventListener('keydown', (e) => {
-        if (e.key === 'Enter' || e.key === ' ') {
-          e.preventDefault();
-          fileInput.click();
-        }
-      });
-
-      // botones
-      btnDownload.addEventListener('click', triggerDownload);
-      btnClear.addEventListener('click', clearAll);
-
-      // limpieza al salir
-      window.addEventListener('beforeunload', cleanupURL);
-    })();
+    setInterval(draw, 35);
+    window.addEventListener("resize", () => {
+      canvas.height = window.innerHeight;
+      canvas.width = window.innerWidth;
+    });
   </script>
 </body>
 </html>
