--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Página Web de Mateo</title>
+  <title>Página de Mateo 6-2</title>
   <style>
     body {
       margin: 0;
@@ -12,6 +12,11 @@
       font-family: monospace;
       text-align: center;
       overflow: hidden;
+    }
+
+    /* Cursor hacker */
+    body, button, a {
+      cursor: url('https://cur.cursors-4u.net/cursors/cur-2/cur116.cur'), auto;
     }
 
     #matrix-bg {
@@ -29,7 +34,23 @@
       height: 100vh;
     }
 
-    /* ✨ Texto hacker rainbow */
+    /* Animación de carga */
+    #loader {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: black;
+      color: #1cff85;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      font-size: 1.5rem;
+      z-index: 1000;
+    }
+    .hidden { display: none; }
+
+    /* ✨ Texto hacker rainbow con glitch */
     h1 {
       font-size: 2.5rem;
       font-weight: bold;
@@ -37,7 +58,7 @@
       background-size: 400%;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      animation: rainbow 6s linear infinite;
+      animation: rainbow 6s linear infinite, glitch 1s infinite;
       text-shadow: 0 0 15px #00ff99;
     }
 
@@ -45,10 +66,25 @@
       0% { background-position: 0% 50%; }
       100% { background-position: 400% 50%; }
     }
+    @keyframes glitch {
+      0% { transform: skew(0deg); }
+      20% { transform: skew(3deg); }
+      40% { transform: skew(-3deg); }
+      60% { transform: skew(2deg); }
+      80% { transform: skew(-2deg); }
+      100% { transform: skew(0deg); }
+    }
 
-    /* Botón estilo hacker */
+    h2 {
+      font-size: 1.2rem;
+      margin-top: 10px;
+      color: #1cff85;
+      text-shadow: 0 0 8px #00ff99;
+    }
+
+    /* Botones hacker */
     .btn {
-      margin-top: 25px;
+      margin-top: 20px;
       padding: 14px 30px;
       font-size: 1.2rem;
       font-weight: bold;
@@ -67,18 +103,52 @@
       box-shadow: 0 0 30px #1cff85, 0 0 50px #1cff85 inset;
       transform: scale(1.1);
     }
+
+    video {
+      margin-top: 20px;
+      max-width: 90%;
+      border: 2px solid #1cff85;
+      border-radius: 10px;
+      box-shadow: 0 0 15px #1cff85;
+    }
   </style>
 </head>
 <body>
+  <!-- Pantalla de carga -->
+  <div id="loader">Cargando sistema...<br>Accediendo a servidores...</div>
+
+  <!-- Fondo Matrix -->
   <canvas id="matrix-bg"></canvas>
-  <div class="container">
-    <h1>💻 Página Web de Mateo 💀</h1>
-    <!-- Botón de descarga -->
-    <a href="video.mp4" download class="btn">⬇️ Descargar Video</a>
+
+  <!-- Contenido principal -->
+  <div class="container hidden" id="main-content">
+    <h1>💻 Página de Mateo 6-2 💀</h1>
+    <h2 id="subtitle">Iniciando hackeo...</h2>
+
+    <!-- Video Preview -->
+    <video controls>
+      <source src="video.mp4" type="video/mp4">
+      Tu navegador no soporta video.
+    </video>
+
+    <!-- Botones -->
+    <a href="video.mp4" download class="btn" id="btn-download">⬇️ Descargar Video</a>
   </div>
 
+  <!-- Sonidos -->
+  <audio id="click-sound" src="https://assets.mixkit.co/sfx/download/mixkit-select-click-1109.wav"></audio>
+  <audio id="hover-sound" src="https://assets.mixkit.co/sfx/download/mixkit-retro-game-notification-212.wav"></audio>
+
   <script>
-    // ===== Fondo Matrix Hacker =====
+    // ===== Loader animado =====
+    window.addEventListener("load", () => {
+      setTimeout(() => {
+        document.getElementById("loader").classList.add("hidden");
+        document.getElementById("main-content").classList.remove("hidden");
+      }, 2000); // 2s de carga
+    });
+
+    // ===== Fondo Matrix =====
     const canvas = document.getElementById('matrix-bg');
     const ctx = canvas.getContext('2d');
     let fontSize = 18;
@@ -109,13 +179,41 @@
         }
         drops[i]++;
       }
-
       requestAnimationFrame(draw);
     }
 
     window.addEventListener("resize", initMatrix);
     initMatrix();
     draw();
+
+    // ===== Subtítulos dinámicos =====
+    const frases = [
+      "Iniciando hackeo...",
+      "Accediendo a la base de datos...",
+      "Cifrando conexiones...",
+      "Descarga lista...",
+      "Sistema infiltrado ✅"
+    ];
+    let i = 0;
+    setInterval(() => {
+      document.getElementById("subtitle").innerText = frases[i % frases.length];
+      i++;
+    }, 2500);
+
+    // ===== Sonidos =====
+    const clickSound = document.getElementById("click-sound");
+    const hoverSound = document.getElementById("hover-sound");
+
+    document.querySelectorAll(".btn").forEach(btn => {
+      btn.addEventListener("click", () => {
+        clickSound.currentTime = 0;
+        clickSound.play();
+      });
+      btn.addEventListener("mouseover", () => {
+        hoverSound.currentTime = 0;
+        hoverSound.play();
+      });
+    });
   </script>
 </body>
 </html>
