--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       height: 100vh;
     }
 
-    /* Animación de carga */
+    /* ===== Animación de carga ===== */
     #loader {
       position: fixed;
       top: 0; left: 0;
@@ -48,9 +48,24 @@
       font-size: 1.5rem;
       z-index: 1000;
     }
+    #loader-text {
+      font-size: 1.6rem;
+      font-weight: bold;
+      background: linear-gradient(90deg, red, orange, yellow, green, cyan, blue, violet);
+      background-size: 400%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: rainbow 6s linear infinite;
+    }
+
     .hidden { display: none; }
 
-    /* ✨ Texto hacker rainbow con glitch */
+    @keyframes rainbow {
+      0% { background-position: 0% 50%; }
+      100% { background-position: 400% 50%; }
+    }
+
+    /* ✨ Texto hacker rainbow glitch */
     h1 {
       font-size: 2.5rem;
       font-weight: bold;
@@ -62,10 +77,6 @@
       text-shadow: 0 0 15px #00ff99;
     }
 
-    @keyframes rainbow {
-      0% { background-position: 0% 50%; }
-      100% { background-position: 400% 50%; }
-    }
     @keyframes glitch {
       0% { transform: skew(0deg); }
       20% { transform: skew(3deg); }
@@ -115,7 +126,9 @@
 </head>
 <body>
   <!-- Pantalla de carga -->
-  <div id="loader">Cargando sistema...<br>Accediendo a servidores...</div>
+  <div id="loader">
+    <div id="loader-text"></div>
+  </div>
 
   <!-- Fondo Matrix -->
   <canvas id="matrix-bg"></canvas>
@@ -131,7 +144,7 @@
       Tu navegador no soporta video.
     </video>
 
-    <!-- Botones -->
+    <!-- Botón de descarga -->
     <a href="video.mp4" download class="btn" id="btn-download">⬇️ Descargar Video</a>
   </div>
 
@@ -140,13 +153,45 @@
   <audio id="hover-sound" src="https://assets.mixkit.co/sfx/download/mixkit-retro-game-notification-212.wav"></audio>
 
   <script>
-    // ===== Loader animado =====
-    window.addEventListener("load", () => {
-      setTimeout(() => {
-        document.getElementById("loader").classList.add("hidden");
-        document.getElementById("main-content").classList.remove("hidden");
-      }, 2000); // 2s de carga
-    });
+    // ===== Loader con efecto máquina de escribir =====
+    const loaderText = document.getElementById("loader-text");
+    const frasesLoader = [
+      "Buscando servidores...",
+      "Accediendo al sistema...",
+      "Inyectando código...",
+      "Conexión establecida ✅"
+    ];
+    let index = 0;
+    let charIndex = 0;
+    let deleting = false;
+
+    function typeEffect() {
+      const current = frasesLoader[index];
+      if (!deleting) {
+        loaderText.textContent = current.substring(0, charIndex + 1);
+        charIndex++;
+        if (charIndex === current.length) {
+          deleting = true;
+          setTimeout(typeEffect, 1200); // pausa al final
+          return;
+        }
+      } else {
+        loaderText.textContent = current.substring(0, charIndex - 1);
+        charIndex--;
+        if (charIndex === 0) {
+          deleting = false;
+          index = (index + 1) % frasesLoader.length;
+        }
+      }
+      setTimeout(typeEffect, deleting ? 60 : 100);
+    }
+    typeEffect();
+
+    // Ocultar loader y mostrar página después de 6s
+    setTimeout(() => {
+      document.getElementById("loader").classList.add("hidden");
+      document.getElementById("main-content").classList.remove("hidden");
+    }, 6000);
 
     // ===== Fondo Matrix =====
     const canvas = document.getElementById('matrix-bg');
