--- a/index.html
+++ b/index.html
@@ -5,20 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Página de Mateo 6-2</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
     body {
       margin: 0;
       background: #000;
-      color: #00ff00;
-      font-family: monospace;
-      text-align: center;
+      color: #1cff85;
+      font-family: 'Share Tech Mono', monospace;
       overflow: hidden;
+      text-align: center;
     }
 
-    /* Cursor hacker */
-    body, button, a {
-      cursor: url('https://cur.cursors-4u.net/cursors/cur-2/cur116.cur'), auto;
+    /* Pantalla de carga */
+    #loading-screen {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      z-index: 9999;
     }
 
+    #loading-text {
+      font-size: 1.5rem;
+      text-shadow: 0 0 10px #1cff85;
+      white-space: nowrap;
+      overflow: hidden;
+      border-right: 2px solid #1cff85;
+      width: 0;
+      animation: typing 3s steps(30, end) forwards, blink 0.8s infinite;
+    }
+
+    @keyframes typing {
+      from { width: 0 }
+      to { width: 18ch }
+    }
+    @keyframes blink {
+      50% { border-color: transparent }
+    }
+
+    /* Fondo Matrix */
     #matrix-bg {
       position: fixed;
       top: 0; left: 0;
@@ -26,78 +55,33 @@
       z-index: -1;
     }
 
+    /* Contenido principal */
     .container {
-      display: flex;
+      display: none; /* oculto hasta terminar carga */
       flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
     }
 
-    /* ===== Animación de carga ===== */
-    #loader {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: black;
-      color: #1cff85;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      font-size: 1.5rem;
-      z-index: 1000;
+    h1 {
+      font-size: 2rem;
+      animation: rainbow 3s infinite linear;
     }
-    #loader-text {
-      font-size: 1.6rem;
-      font-weight: bold;
-      background: linear-gradient(90deg, red, orange, yellow, green, cyan, blue, violet);
-      background-size: 400%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: rainbow 6s linear infinite;
-    }
-
-    .hidden { display: none; }
 
     @keyframes rainbow {
-      0% { background-position: 0% 50%; }
-      100% { background-position: 400% 50%; }
+      0% { color: #ff0000; }
+      20% { color: #ff9900; }
+      40% { color: #00ff00; }
+      60% { color: #00ffff; }
+      80% { color: #ff00ff; }
+      100% { color: #ff0000; }
     }
 
-    /* ✨ Texto hacker rainbow glitch */
-    h1 {
-      font-size: 2.5rem;
-      font-weight: bold;
-      background: linear-gradient(90deg, red, orange, yellow, green, cyan, blue, violet);
-      background-size: 400%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: rainbow 6s linear infinite, glitch 1s infinite;
-      text-shadow: 0 0 15px #00ff99;
-    }
-
-    @keyframes glitch {
-      0% { transform: skew(0deg); }
-      20% { transform: skew(3deg); }
-      40% { transform: skew(-3deg); }
-      60% { transform: skew(2deg); }
-      80% { transform: skew(-2deg); }
-      100% { transform: skew(0deg); }
-    }
-
-    h2 {
-      font-size: 1.2rem;
-      margin-top: 10px;
-      color: #1cff85;
-      text-shadow: 0 0 8px #00ff99;
-    }
-
-    /* Botones hacker */
     .btn {
       margin-top: 20px;
-      padding: 14px 30px;
-      font-size: 1.2rem;
+      padding: 12px 24px;
+      font-size: 1rem;
       font-weight: bold;
       color: #eaffea;
       background: transparent;
@@ -105,107 +89,96 @@
       border-radius: 8px;
       cursor: pointer;
       text-decoration: none;
-      box-shadow: 0 0 15px #1cff85, 0 0 30px #1cff85 inset;
-      transition: all 0.3s ease-in-out;
+      box-shadow: 0 0 10px #1cff85;
+      transition: all 0.2s ease-in-out;
     }
     .btn:hover {
       background: #1cff85;
       color: #000;
-      box-shadow: 0 0 30px #1cff85, 0 0 50px #1cff85 inset;
-      transform: scale(1.1);
+      box-shadow: 0 0 20px #1cff85;
     }
 
-    video {
-      margin-top: 20px;
-      max-width: 90%;
-      border: 2px solid #1cff85;
-      border-radius: 10px;
-      box-shadow: 0 0 15px #1cff85;
+    /* Cursor personalizado */
+    body, a, button {
+      cursor: url('https://cur.cursors-4u.net/cursors/cur-2/cur113.cur'), auto;
     }
   </style>
 </head>
 <body>
   <!-- Pantalla de carga -->
-  <div id="loader">
-    <div id="loader-text"></div>
+  <div id="loading-screen">
+    <div id="loading-text"></div>
   </div>
 
   <!-- Fondo Matrix -->
   <canvas id="matrix-bg"></canvas>
 
   <!-- Contenido principal -->
-  <div class="container hidden" id="main-content">
-    <h1>💻 Página de Mateo 6-2 💀</h1>
-    <h2 id="subtitle">Iniciando hackeo...</h2>
-
-    <!-- Video Preview -->
-    <video controls>
-      <source src="video.mp4" type="video/mp4">
-      Tu navegador no soporta video.
-    </video>
-
-    <!-- Botón de descarga -->
-    <a href="video.mp4" download class="btn" id="btn-download">⬇️ Descargar Video</a>
+  <div class="container" id="main-content">
+    <h1>💻 Página de Mateo 6-2 💻</h1>
+    <a href="video.mp4" download class="btn">⬇️ Descargar Video</a>
   </div>
 
-  <!-- Sonidos -->
-  <audio id="click-sound" src="https://assets.mixkit.co/sfx/download/mixkit-select-click-1109.wav"></audio>
-  <audio id="hover-sound" src="https://assets.mixkit.co/sfx/download/mixkit-retro-game-notification-212.wav"></audio>
-
   <script>
-    // ===== Loader con efecto máquina de escribir =====
-    const loaderText = document.getElementById("loader-text");
-    const frasesLoader = [
+    // Frases estilo hacker
+    const frases = [
       "Buscando servidores...",
       "Accediendo al sistema...",
-      "Inyectando código...",
-      "Conexión establecida ✅"
+      "Conexión establecida...",
+      "Bienvenido Mateo 6-2"
     ];
-    let index = 0;
-    let charIndex = 0;
-    let deleting = false;
 
-    function typeEffect() {
-      const current = frasesLoader[index];
-      if (!deleting) {
-        loaderText.textContent = current.substring(0, charIndex + 1);
-        charIndex++;
-        if (charIndex === current.length) {
-          deleting = true;
-          setTimeout(typeEffect, 1200); // pausa al final
-          return;
+    const loadingText = document.getElementById("loading-text");
+    let i = 0;
+
+    function escribirFrase(frase, callback) {
+      let j = 0;
+      loadingText.style.width = "0";
+      loadingText.innerHTML = "";
+
+      const typing = setInterval(() => {
+        loadingText.innerHTML = frase.substring(0, j);
+        j++;
+        if (j > frase.length) {
+          clearInterval(typing);
+          setTimeout(callback, 1000);
         }
-      } else {
-        loaderText.textContent = current.substring(0, charIndex - 1);
-        charIndex--;
-        if (charIndex === 0) {
-          deleting = false;
-          index = (index + 1) % frasesLoader.length;
-        }
-      }
-      setTimeout(typeEffect, deleting ? 60 : 100);
+      }, 80);
     }
-    typeEffect();
 
-    // Ocultar loader y mostrar página después de 6s
-    setTimeout(() => {
-      document.getElementById("loader").classList.add("hidden");
-      document.getElementById("main-content").classList.remove("hidden");
-    }, 6000);
+    function mostrarFrases() {
+      if (i < frases.length) {
+        // cambiar color cada frase
+        const colores = ["#1cff85", "#0ff", "#ff00ff", "#ff0", "#f00"];
+        loadingText.style.color = colores[i % colores.length];
+        escribirFrase(frases[i], () => {
+          i++;
+          mostrarFrases();
+        });
+      } else {
+        // quitar loading y mostrar página
+        document.getElementById("loading-screen").style.display = "none";
+        document.getElementById("main-content").style.display = "flex";
+      }
+    }
 
-    // ===== Fondo Matrix =====
+    mostrarFrases();
+
+    // Fondo Matrix
     const canvas = document.getElementById('matrix-bg');
     const ctx = canvas.getContext('2d');
-    let fontSize = 18;
-    let columns, drops;
-    const letters = '01あいうえおｶｷｸｹｺ$#@*&%+~';
+    canvas.height = window.innerHeight;
+    canvas.width = window.innerWidth;
+
+    const letters = '01アイウエオカキクケコｱｲｳｴｵｶｷｸｹｺ$#@*&%+~';
     const lettersArr = letters.split('');
 
-    function initMatrix() {
-      canvas.height = window.innerHeight;
-      canvas.width = window.innerWidth;
-      columns = Math.floor(canvas.width / fontSize);
-      drops = Array(columns).fill(1);
+    const fontSize = 18;
+    const columns = canvas.width / fontSize;
+    const drops = [];
+
+    for (let i = 0; i < columns; i++) {
+      drops[i] = 1;
     }
 
     function draw() {
@@ -224,40 +197,12 @@
         }
         drops[i]++;
       }
-      requestAnimationFrame(draw);
     }
 
-    window.addEventListener("resize", initMatrix);
-    initMatrix();
-    draw();
-
-    // ===== Subtítulos dinámicos =====
-    const frases = [
-      "Iniciando hackeo...",
-      "Accediendo a la base de datos...",
-      "Cifrando conexiones...",
-      "Descarga lista...",
-      "Sistema infiltrado ✅"
-    ];
-    let i = 0;
-    setInterval(() => {
-      document.getElementById("subtitle").innerText = frases[i % frases.length];
-      i++;
-    }, 2500);
-
-    // ===== Sonidos =====
-    const clickSound = document.getElementById("click-sound");
-    const hoverSound = document.getElementById("hover-sound");
-
-    document.querySelectorAll(".btn").forEach(btn => {
-      btn.addEventListener("click", () => {
-        clickSound.currentTime = 0;
-        clickSound.play();
-      });
-      btn.addEventListener("mouseover", () => {
-        hoverSound.currentTime = 0;
-        hoverSound.play();
-      });
+    setInterval(draw, 35);
+    window.addEventListener("resize", () => {
+      canvas.height = window.innerHeight;
+      canvas.width = window.innerWidth;
     });
   </script>
 </body>
