--- a/index.html
+++ b/index.html
@@ -125,12 +125,16 @@
     const drops = [];
     for (let x = 0; x < columns; x++) drops[x] = 1;
 
+    let hue = 0; // color dinámico
+
     function drawMatrix() {
-      ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+      ctx.fillStyle = "rgba(0, 0, 0, 0.08)";
       ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-      ctx.fillStyle = "#0f0";
       ctx.font = fontSize + "px monospace";
+
+      hue = (hue + 2) % 360; // cambio de color progresivo
+      ctx.fillStyle = `hsl(${hue}, 100%, 50%)`;
 
       for (let i = 0; i < drops.length; i++) {
         const text = letters.charAt(Math.floor(Math.random() * letters.length));
@@ -140,7 +144,7 @@
         drops[i]++;
       }
     }
-    setInterval(drawMatrix, 40);
+    setInterval(drawMatrix, 30); // velocidad más rápida
 
     // ---- Loader frases ----
     const frases = [
